--- a/public/views/create_personage.html
+++ b/public/views/create_personage.html
@@ -65,6 +65,96 @@
             </div>
         </form>
 
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                Попадание (колющий/режущий удар):
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{hitPiercePunch}}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                попадание (рубящий удар):
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{hitChopPunch}}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                попадание (дальнобойное):
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{rangedHit}}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                парирование (колющий/режущий удар):
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{parryPiercePunch}}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                парирование(рубящий удар):
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{parryChopPunch}}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                уклонение:
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{dodge}}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                общие ОД:
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{generalActionPoints}}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                Ментальные ОД:
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{mentalActionPoints}}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                Инициатива:
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{initiative}}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                Очки выносливости:
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{endurancePoints}}
+            </div>
+        </div>
+
     </div>
 
     <div>
@@ -1015,7 +1105,7 @@
         $scope.meritAvailable = true;
         $scope.currentMerit = null;
 
-        $window.onbeforeunload =  function() {
+        $window.onbeforeunload = function () {
             return "go away!";
         };
 
@@ -1031,6 +1121,7 @@
 
         function success(data) {
             $scope.recalculateMagicSchools();
+            $scope.recalculateBasicCharacteristics();
             $scope.loader = false;
         }
 
@@ -1094,6 +1185,62 @@
             $scope.notes = data.personage.notes;
             personage.resolve();
         });
+
+        $scope.recalculateBasicCharacteristics = function () {
+            angular.forEach($scope.personageAttributes, function (personageAttribute) {
+                switch (personageAttribute.Attribute.name) {
+                    case "Сила":
+                        $scope.power = personageAttribute.value;
+                        break;
+                    case "Ловкость":
+                        $scope.dexterity = personageAttribute.value;
+                        break;
+                    case "Скорость":
+                        $scope.speed = personageAttribute.value;
+                        break;
+                    case "Реакция":
+                        $scope.reaction = personageAttribute.value;
+                        break;
+                    case "Восприятие":
+                        $scope.perception = personageAttribute.value;
+                        break;
+                    case "Выносливость":
+                        $scope.endurance = personageAttribute.value;
+                        break;
+                    case "Живучесть":
+                        $scope.vitality = personageAttribute.value;
+                        break;
+                    case "Мудрость":
+                        $scope.wisdom = personageAttribute.value;
+                        break;
+                    case "Интеллект":
+                        $scope.intelligence = personageAttribute.value;
+                        break;
+                    case "Воля":
+                        $scope.will = personageAttribute.value;
+                        break;
+                    case "Харизма":
+                        $scope.charisma = personageAttribute.value;
+                        break;
+                }
+            });
+
+            $scope.hitPiercePunch = $scope.dexterity + $scope.speed;
+            $scope.hitChopPunch = $scope.dexterity + $scope.power;
+            $scope.rangedHit = $scope.dexterity + $scope.perception;
+            $scope.parryPiercePunch = $scope.reaction + $scope.speed;
+            $scope.parryChopPunch = $scope.power + $scope.reaction;
+            $scope.dodge = $scope.dexterity + $scope.reaction;
+            if ($scope.speed < $scope.intelligence) {
+                $scope.generalActionPoints = $scope.speed;
+            } else {
+                $scope.generalActionPoints = $scope.intelligence;
+            }
+            $scope.mentalActionPoints = $scope.intelligence;
+            $scope.initiative = $scope.reaction;
+            $scope.endurancePoints = $scope.endurance * 20;
+
+        };
 
         $scope.recalculateMagicSchools = function () {
             $scope.schools = [];
@@ -1207,7 +1354,7 @@
                 $http.post('/history', {
                     key: 'SPELL_LEVEL' + personageSpell.level.toString() + 'UP',
                     value: cost.toString()
-                }).success(function() {
+                }).success(function () {
                     increaseLevel.resolve();
                 });
             } else {
@@ -1232,7 +1379,7 @@
                 $http.get('/byKey/' + 'SPELL_LEVEL' + personageSpell.level.toString() + 'UP').success(function (result) {
                     $scope.personage.experience = $scope.personage.experience + parseInt(result.result.value);
                     personageSpell.level--;
-                }).success(function() {
+                }).success(function () {
                     decreaseLevel.resolve();
                 });
             } else {
@@ -1285,6 +1432,7 @@
                 }
             });
 
+            $scope.recalculateBasicCharacteristics();
             $scope.loader = false;
         };
 
@@ -1293,13 +1441,7 @@
             $scope.loader = true;
             var isPrimaryAttributeSet = false;
             var isSecondaryAttributeSet = 0;
-            var wisdomDoubleValue = 0;
-
-            angular.forEach($scope.personageAttributes, function (personageAttribute) {
-                if (personageAttribute.Attribute.name == 'Мудрость') {
-                    wisdomDoubleValue = personageAttribute.value * 2;
-                }
-            });
+            var wisdomDoubleValue = $scope.wisdom * 2;
 
             angular.forEach($scope.personageAttachedSkills, function (personageAttachedSkill) {
                 if (personageAttachedSkill.value > 3) {
@@ -1462,6 +1604,7 @@
                     });
                 }
             });
+            $scope.recalculateBasicCharacteristics();
             $scope.loader = false;
         };
 
