--- a/public/views/edit_personage.html
+++ b/public/views/edit_personage.html
@@ -65,6 +65,96 @@
             </div>
         </form>
 
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                Попадание (колющий/режущий удар):
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{hitPiercePunch}}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                попадание (рубящий удар):
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{hitChopPunch}}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                попадание (дальнобойное):
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{rangedHit}}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                парирование (колющий/режущий удар):
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{parryPiercePunch}}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                парирование(рубящий удар):
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{parryChopPunch}}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                уклонение:
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{dodge}}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                общие ОД:
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{generalActionPoints}}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                Ментальные ОД:
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{mentalActionPoints}}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                Инициатива:
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{initiative}}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-2">
+                Очки выносливости:
+            </div>
+            <div class="col-xs-offset-2 col-xs-4">
+                {{endurancePoints}}
+            </div>
+        </div>
+
     </div>
 
     <div>
