убрал перезагрузку при сохранении

--- a/public/views/create_personage.html
+++ b/public/views/create_personage.html
@@ -2325,7 +2325,7 @@
             $scope.loader = true;
 
             function success(data) {
-                location.reload();
+                $scope.loader = false;
             }
 
             var personage = $q.defer();
