ERILON-41 Добавить рандомайзер для врожденок

--- a/public/views/create_personage.html
+++ b/public/views/create_personage.html
@@ -1231,6 +1231,7 @@
                 $scope.loader = true;
                 randomizeInherentValues();
                 setHasInherents();
+                $scope.hasInherents();
                 $scope.savePersonage();
             });
         }
