картинки для базовых характеристик

--- a/public/views/view_personage.html
+++ b/public/views/view_personage.html
@@ -55,92 +55,66 @@
         </form>
 
         <div class="row">
-            <div class="col-xs-offset-1 col-xs-2">
-                Попадание (колющий/режущий удар):
-            </div>
-            <div class="col-xs-offset-2 col-xs-4">
+            <div class="col-xs-offset-1 col-md-2 col-xs-2">
+                <img src="/images/hitPiercePunch.png" width="20" height="20">
                 {{hitPiercePunch}}
             </div>
-        </div>
 
-        <div class="row">
-            <div class="col-xs-offset-1 col-xs-2">
-                попадание (рубящий удар):
-            </div>
-            <div class="col-xs-offset-2 col-xs-4">
+            <div class="col-xs-offset-1 col-md-2 col-xs-2">
+                <img src="/images/hitChopPunch.png" width="20" height="20">
                 {{hitChopPunch}}
             </div>
-        </div>
 
-        <div class="row">
             <div class="col-xs-offset-1 col-xs-2">
-                попадание (дальнобойное):
-            </div>
-            <div class="col-xs-offset-2 col-xs-4">
+                <img src="/images/rangedHit.png" width="20" height="20">
                 {{rangedHit}}
             </div>
         </div>
+        <br/>
 
         <div class="row">
             <div class="col-xs-offset-1 col-xs-2">
-                парирование (колющий/режущий удар):
-            </div>
-            <div class="col-xs-offset-2 col-xs-4">
+                <img src="/images/parryPiercePunch.png" width="20" height="20">
                 {{parryPiercePunch}}
             </div>
-        </div>
 
-        <div class="row">
             <div class="col-xs-offset-1 col-xs-2">
-                парирование(рубящий удар):
-            </div>
-            <div class="col-xs-offset-2 col-xs-4">
+                <img src="/images/parryChopPunch.png" width="20" height="20">
                 {{parryChopPunch}}
             </div>
-        </div>
 
-        <div class="row">
             <div class="col-xs-offset-1 col-xs-2">
-                уклонение:
-            </div>
-            <div class="col-xs-offset-2 col-xs-4">
+                <img src="/images/dodge.png" width="20" height="20">
                 {{dodge}}
             </div>
         </div>
+        <br/>
 
         <div class="row">
             <div class="col-xs-offset-1 col-xs-2">
-                общие ОД:
-            </div>
-            <div class="col-xs-offset-2 col-xs-4">
+                <img src="/images/generalActionPoints.png" width="20" height="20">
                 {{generalActionPoints}}
             </div>
-        </div>
 
-        <div class="row">
             <div class="col-xs-offset-1 col-xs-2">
-                Ментальные ОД:
-            </div>
-            <div class="col-xs-offset-2 col-xs-4">
+                <img src="/images/mentalActionPoints.png" width="20" height="20">
                 {{mentalActionPoints}}
             </div>
+
+            <div class="col-xs-offset-1 col-xs-3">
+                <img src="/images/endurancePoints.png" width="20" height="20">
+                {{endurancePoints}}
+            </div>
         </div>
+        <br/>
 
         <div class="row">
+
             <div class="col-xs-offset-1 col-xs-2">
                 Инициатива:
             </div>
             <div class="col-xs-offset-2 col-xs-4">
                 {{initiative}}
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-offset-1 col-xs-2">
-                Очки выносливости:
-            </div>
-            <div class="col-xs-offset-2 col-xs-4">
-                {{endurancePoints}}
             </div>
         </div>
 
