поменял структуру проекта, вынес логику атрибутов в новый файл

--- a/public/views/create_personage.html
+++ b/public/views/create_personage.html
@@ -160,7 +160,7 @@
     <div>
         <div class="panel-group" id="accordion">
 
-            <div class="panel panel-default">
+            <div class="panel panel-default" ng-controller="personageAttributesController">
                 <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#attributes">
                         <div class="panel-heading">
@@ -1493,56 +1493,6 @@
             }
         };
 
-        $scope.increaseAttribute = function (id) {
-            $scope.loader = true;
-            var maxPrice = 8;
-            var isPrimaryAttributeSet = false;
-            var isSecondaryAttributeSet = 0;
-
-            angular.forEach($scope.raceAttributes, function (raceAttribute) {
-                angular.forEach($scope.personageAttributes, function (personageAttribute) {
-                    if (raceAttribute.Attribute.id == personageAttribute.Attribute.id) {
-                        if (personageAttribute.value > maxPrice - raceAttribute.base_cost) {
-                            isSecondaryAttributeSet++;
-                        }
-                        if (personageAttribute.value > maxPrice - raceAttribute.base_cost + 1) {
-                            isPrimaryAttributeSet = true;
-                        }
-                    }
-                });
-            });
-
-
-            angular.forEach($scope.personageAttributes, function (personageAttribute) {
-                if (personageAttribute.id == id) {
-                    angular.forEach($scope.raceAttributes, function (raceAttribute) {
-                        if (raceAttribute.Attribute.id == personageAttribute.Attribute.id && personageAttribute.value < maxPrice - raceAttribute.base_cost + 2) {
-                            if (personageAttribute.value < maxPrice - raceAttribute.base_cost) {
-                                personageAttribute.value++;
-                                $scope.personage.experience = $scope.personage.experience - raceAttribute.base_cost;
-                            } else {
-                                if (personageAttribute.value == maxPrice - raceAttribute.base_cost + 1) {
-                                    if (!isPrimaryAttributeSet) {
-                                        personageAttribute.value++;
-                                        $scope.personage.experience = $scope.personage.experience - raceAttribute.base_cost;
-                                    }
-                                } else {
-                                    if (isSecondaryAttributeSet < 3) {
-                                        personageAttribute.value++;
-                                        $scope.personage.experience = $scope.personage.experience - raceAttribute.base_cost;
-                                    }
-                                }
-                            }
-                        }
-                    });
-                }
-            });
-
-            $scope.recalculateBasicCharacteristics();
-            $scope.loader = false;
-        };
-
-
         $scope.increaseAttachedSkill = function (id) {
             $scope.loader = true;
             var isPrimaryAttributeSet = false;
@@ -1674,44 +1624,6 @@
                     });
                 }
             });
-        };
-
-        $scope.decreaseAttribute = function (id) {
-            $scope.loader = true;
-            angular.forEach($scope.personageAttributes, function (personageAttribute) {
-                if (personageAttribute.id == id && personageAttribute.value > 1) {
-                    angular.forEach($scope.personageMerits, function (personageMerit) {
-                        angular.forEach(personageMerit.Merit.MeritAttributes, function (meritAttribute) {
-                            if (personageAttribute.Attribute.id == meritAttribute.Attribute.id) {
-                                if (personageAttribute.value <= meritAttribute.value) {
-                                    $scope.deletePersonageMerit(personageMerit);
-                                }
-                            }
-                        });
-
-                        angular.forEach(personageMerit.Merit.MeritAttributeAttachedSkills, function (meritAttributeAttachedSkill) {
-                            if (personageAttribute.Attribute.id == meritAttributeAttachedSkill.Attribute.id) {
-                                angular.forEach($scope.personageAttachedSkills, function (personageAttachedSkill) {
-                                    if (personageAttachedSkill.AttachedSkill.id == meritAttributeAttachedSkill.AttachedSkill.id) {
-                                        if (personageAttachedSkill.value + personageAttribute.value <= meritAttributeAttachedSkill.value) {
-                                            $scope.deletePersonageMerit(personageMerit);
-                                        }
-                                    }
-                                });
-                            }
-                        });
-                    });
-
-                    personageAttribute.value--;
-                    angular.forEach($scope.raceAttributes, function (raceAttribute) {
-                        if (raceAttribute.Attribute.id == personageAttribute.Attribute.id) {
-                            $scope.personage.experience = $scope.personage.experience + raceAttribute.base_cost;
-                        }
-                    });
-                }
-            });
-            $scope.recalculateBasicCharacteristics();
-            $scope.loader = false;
         };
 
         $scope.decreaseAttachedSkill = function (id) {
@@ -2614,6 +2526,7 @@
     });
 
 </script>
+<script src="personage_logic/attributes_controller.js"></script>
 
 </body>
 </html>
