--- a/public/views/create_personage.html
+++ b/public/views/create_personage.html
@@ -67,95 +67,7 @@
             </div>
         </form>
 
-        <div class="row">
-            <div class="col-xs-offset-1 col-xs-2">
-                Попадание (колющий/режущий удар):
-            </div>
-            <div class="col-xs-offset-2 col-xs-4">
-                {{hitPiercePunch}}
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-offset-1 col-xs-2">
-                попадание (рубящий удар):
-            </div>
-            <div class="col-xs-offset-2 col-xs-4">
-                {{hitChopPunch}}
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-offset-1 col-xs-2">
-                попадание (дальнобойное):
-            </div>
-            <div class="col-xs-offset-2 col-xs-4">
-                {{rangedHit}}
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-offset-1 col-xs-2">
-                парирование (колющий/режущий удар):
-            </div>
-            <div class="col-xs-offset-2 col-xs-4">
-                {{parryPiercePunch}}
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-offset-1 col-xs-2">
-                парирование(рубящий удар):
-            </div>
-            <div class="col-xs-offset-2 col-xs-4">
-                {{parryChopPunch}}
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-offset-1 col-xs-2">
-                уклонение:
-            </div>
-            <div class="col-xs-offset-2 col-xs-4">
-                {{dodge}}
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-offset-1 col-xs-2">
-                общие ОД:
-            </div>
-            <div class="col-xs-offset-2 col-xs-4">
-                {{generalActionPoints}}
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-offset-1 col-xs-2">
-                Ментальные ОД:
-            </div>
-            <div class="col-xs-offset-2 col-xs-4">
-                {{mentalActionPoints}}
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-offset-1 col-xs-2">
-                Инициатива:
-            </div>
-            <div class="col-xs-offset-2 col-xs-4">
-                {{initiative}}
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-offset-1 col-xs-2">
-                Очки выносливости:
-            </div>
-            <div class="col-xs-offset-2 col-xs-4">
-                {{endurancePoints}}
-            </div>
-        </div>
+        <div data-ng-include data-src="'derivatives_characteristics.html'"></div>
 
     </div>
 
@@ -537,17 +449,22 @@
                                             </table>
 
                                             <div class="row">
-                                                <div class="col-md-offset-8 col-md-2 col-xs-2">
-                                                    <button ng-show="showGenerateIneherentsButton" type="button" class="btn btn-default pull-right"
+                                                <div class="col-md-offset-8 col-md-2 col-xs-6">
+                                                    <button ng-show="showGenerateIneherentsButton" type="button" class="btn btn-default"
                                                             ng-click="randomizeInherentsAndValues()">Сгенерить врожденки
                                                     </button>
                                                 </div>
-                                                <div class="col-xs-2">
-                                                    <button type="button" class="btn btn-default pull-right"
+                                                <div class="col-md-2 col-xs-6">
+                                                    <button ng-if="!isMobile" type="button" class="btn btn-default "
                                                             ng-click="calculateInherentSelectOptions()"
                                                             data-toggle="modal"
                                                             data-target="#addInherentDialog">Добавить
                                                         врожденное
+                                                    </button>
+                                                    <button ng-if="isMobile" type="button" class="btn btn-default "
+                                                            ng-click="calculateInherentSelectOptions()"
+                                                            data-toggle="modal"
+                                                            data-target="#addInherentDialog">Добавить
                                                     </button>
                                                 </div>
                                             </div>
