ERILON-44 Добавить регистрацию и логин

--- a/public/views/edit_personage.html
+++ b/public/views/edit_personage.html
@@ -1064,6 +1064,7 @@
             $scope.personageTriggerSkills = data.personage.PersonageTriggerSkills;
             $scope.personageSpells = data.personage.PersonageSpells;
             $scope.notes = data.personage.notes;
+            $scope.playerId = data.personage.PlayerId;
             personage.resolve();
         });
 
