--- a/public/views/main-menu.html
+++ b/public/views/main-menu.html
@@ -7,6 +7,7 @@
         </div>
         <div id="main_menu" class="panel-collapse collapse">
             <ul class="list-group">
+                <li class="list-group-item"><a href="/">Сменить юзера</a></li>
                 <li class="list-group-item"><a href="/views/race_manager.html">Расы</a></li>
                 <li class="list-group-item"><a href="/views/attribute_manager.html">Атрибуты</a></li>
                 <li class="list-group-item"><a href="/views/merit_manager.html">Достоинства</a></li>
@@ -15,7 +16,7 @@
                 <li class="list-group-item"><a href="/views/attached_skills_manager.html">Прикрепленные навыки</a></li>
                 <li class="list-group-item"><a href="/views/trigger_skills_manager.html">Тригерные навыки</a></li>
                 <li class="list-group-item"><a href="/views/spells_manager.html">Заклинания</a></li>
-                <li class="list-group-item"><a href="/">Персонажи</a></li>
+                <li class="list-group-item"><a href="/views/user_personage_manager.html?id={{playerId}}">Мои персонажи</a></li>
             </ul>
         </div>
     </div>
