--- a/public/views/view_personage.html
+++ b/public/views/view_personage.html
@@ -566,6 +566,7 @@
             $scope.personageTriggerSkills = data.personage.PersonageTriggerSkills;
             $scope.personageSpells = data.personage.PersonageSpells;
             $scope.notes = data.personage.notes;
+            $scope.playerId = data.personage.PlayerId;
             $scope.calculateMagicSchools();
             personage.resolve();
         });
